fix: articles gap

--- a/src/containers/Articles/styles.scss
+++ b/src/containers/Articles/styles.scss
@@ -31,6 +31,7 @@
 
         &__list{
             @include flex(sb, c, row);
+            gap: var(--space-xxs);
 
             & > *:not(:last-child){
                 margin-bottom: initial;
